--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,228 +1,97 @@
 html, body{
-		font-family: 'Bitter', Arial, 'Georgia', Times, Times New Roman, serif;
-		height: 100%;
-  		margin: 0;
+		font-family: 'Bitter', Arial, 'Georgia', Times, Times New Roman, serif !important;
+		margin-bottom: 0;
 		overflow-x: hidden;
+		height: 100%;
 }
-
-.wrapper{
-		min-height: 100%;
-		margin-bottom: -50px;
+h2{
+	font-size: 35px;
+}h3{
+	font-size: 25px;
 }
-
-header{
-	background-color: #ebebeb;
-	margin-bottom: 20px;
-	border-bottom:3px solid #777;
-}
-
-#name{
-	text-align: left;
-	background-color: #169eae;
-	color: #ebebeb;
-	font-size: 40px;
-	padding:20px;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-#nav{ 
-	font-size: 20px;
-	text-align: center;
-	padding: 25px 0;
-	float: right;
-}
-
-#nav a{
-	text-decoration: none;
-	color: #777;
-}
-
-.about a:hover{
-	color: green;
-}
-
-.header2{
-	font-size: 30px;
-	color: #169eae;
-	padding-left: 0;
-	padding-bottom: 10px;
-	border-bottom: 3px solid #777;
-	margin-bottom: 20px;
-}
-
 p{
-		font-size: 18px;
-		color: #777;
-		line-height: 40px;
-		clear: both;
-		overflow: auto;
+	font-size: 20px;
+	line-height: 27px;
+}
+#tarciso{
+	border: 1px solid #ebebeb;
+}
+.wrapper{
+    min-height: 100%;
+    margin: 0 auto -50px;
 }
 
-#section{
-		float: left;
-		padding: 0 50px 30px 50px;
-		margin-bottom: 20px;
-		background-color: #ebebeb;
-		border: 3px solid #777;
+.navbar{
+	border-radius: 0;
+	padding-top: 10px;
 }
 
-
-#aside{
-	float: right;
-	text-align: center;
-	padding: 0 50px 30px 50px;
-	margin-bottom: 20px;
-	background-color: #ebebeb;
-	border: 3px solid #777;
+.navbar-brand{
+	font-size: 36px;
 }
 
-.header3{
-	color: #169eae;
-	padding-bottom: 10px;
+ul{
+	font-size: 20px;
+}
+
+.panel{
+	padding: 0 20px 20px 20px;
+}
+
+.page-header{
+	border-bottom: 3px solid #777 !important;
+	padding-right: 0;
 	padding-left: 0;
-	border-bottom: 3px solid #777;
+}
+
+.bounce{
+	text-decoration: none;
+	color: rgb(255,255,255);
+	border: 3px solid;
+}
+
+.bounce:hover{
+	border: .5px;
+}
+
+#relative{
+	position: relative;
+}
+
+#absolute{
+	color:  #169e9e;
 	margin-bottom: 20px;
 }
-	
-}
-img:hover{
-	box-shadow: 1px 1px 10px;
-}
 
-.nav-container{
-	padding: 10px;
+.portfolioImage{
+	width: 100%;
+	min-height: 260px;
 }
 
-
-footer{
-		color: #ebebeb;
-		padding: 10px;
-		text-align: center;
-		font-size: 14px;
-		background-color: #777;
-		width: inherit;
-		border-top: 7px solid #169eae;
-	}
+.navbar-inverse{
+	border-top: 2px solid rgb(220,20,60) !important;
+}
 
 .footer, 
 .push{
 
+	color: 	rgb(169,169,169) !important;
+	padding-top: 30px !important;
 	height: 50px;
 }
 
 
-/*  
-			PORTFOLIO.HTML STYLE.CSS PARAMENTERS
-	*/
-	.portfolio-image{
-		margin-bottom: 20px;
-	}
-
-	.portfolio-image img{
- 		width: inherit;
- 		height: inherit;
- 		max-height: 400px;
- 		overflow: hidden;
- 		border: 1px solid red;
-	}
-
-	.portfolio-image a{
- 		width: inherit;
- 		height: inherit;
-
-	}
-
-	#relative{
-		position: relative;
-	}
-
-	#absolute{
-		width: inherit;
+@media only screen and ( max-width: 768px){
+	.navbar-brand{
 		text-align: center;
-		font-size: 30px;
-		position: absolute;
-		bottom: 30px;	
-		color: #ebebeb;
-		background-color: #169eae;
 	}
-
-/*
-			CONTACT.HTML STYLE.CSS PARAMETERS
-	*/
-	form{
-		font-size: 20px;
-		line-height: 50px;
-		font: bold;
-		color: #777;
+	h3{
+		text-align: left !important;
 	}
-
-	input{
-		margin: 0;
-		width: 100%;
-	}
-	textarea{
-		height: 120px;
-		width: 100%;
-		margin-bottom: 0;
-	}
-
-	.submit{
-		width: 150px;
-		color: #ebebeb;
-		background-color: #169e9e;
-		border: 1px solid #777;
-	}
-	.submit:hover{
-		font-size: 21px;
-		box-shadow: 1px 1px 10px #777;
-	}
-
-
-
-@media only screen and(min-width: 980px){
-	
 }
 
-@media only screen and (max-width: 780px) {
-	#name{
-		text-align: center;
-	}
-	#nav{
-		text-align: center;
-	}
-
-}
-@media only screen and (max-width: 768px) {
-	.section-container{
-		padding: 0 40px;
-	}
-	.about{
-		text-align: right;
-	}
-	
-}	
-
-@media only screen and (max-width: 740px) {
-	
-	
-
-	#name{
-		padding: 10px;
-	}
-
-	#nav{
-		text-align: center;
-		padding: 10px;
-	}
-
-	.header3{
+@media only screen and ( max-width: 400px){
+	h3 .header3{
 		text-align: left;
 	}
 }
-
-@media only screen and (max-width: 680px) {
-	.about{
-		text-align: center;
-	}
-}
-
